src/test/ui/issues/issue-5XXXX/issue-58857.stderr
error: negative bounds are not supported
  --> $DIR/issue-58857.rs:4:7
   |
LL | impl<A: !Valid> Conj<A>{}
   |       ^^^^^^^^ negative bounds are not supported

error: aborting due to previous error

